services/debug-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: debug-server
  name: debug-server
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: debug-server
  type: ClusterIP
