services/debug-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: debug-server
  namespace: default
spec:
  rules:
  - host: debug.takutakahashi.dev
    http:
      paths:
      - backend:
          service:
            name: debug-server
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - debug.takutakahashi.dev
    secretName: debug-server-tls-secret
